cmake_minimum_required(VERSION 4.0)
project(Credit_Card_Balance_Checker_OTP_Bypass)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(.github)
include_directories(.idea)
include_directories(.vscode)

add_executable(Credit_Card_Balance_Checker_OTP_Bypass
        .github/workflows/python-app.yml
        .idea/.gitignore
        .idea/copilot.data.migration.agent.xml
        .idea/copilot.data.migration.ask.xml
        .idea/copilot.data.migration.ask2agent.xml
        .idea/copilot.data.migration.edit.xml
        .idea/Credit-Card-Balance-Checker-OTP-Bypass.iml
        .idea/editor.xml
        .idea/encodings.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .vscode/extensions.json
        .vscode/launch.json
        .vscode/settings.json
        cards.json
        cc.txt
        checker.py
        dashbord.png
        index.html
        main.py
        README.md
        requirements.txt
        Untitled-1.ipynb
        Untitled-2.ipynb
        Untitled-3.ipynb)
